first section of main was edited

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </section>
     </header>
     <main>
-      <!--Some Info-->
-      <section class="text-center container mx-auto px-20 mb-20">
+      <!--Some Info (Legal Practice)-->
+      <section class="text-center s container mx-auto px-20 mb-20">
         <p class="info-title text-3xl pb-8">The Legal Practice Area</p>
         <p class="info-description">Legal services are the services involving legal or law related matters like issue of <br> 
           legal opinion, filing, pleading and defending of law suits etc [sic] by a <br>
